# tinyfiledialogs

./: .gitignore  CMakeLists.txt  README.MD  justfile  tfd.hpp  tinyfd_moredialogs.c  tinyfiledialogs.c  tinyfiledialogs.h
bin-lib/: tinyfiledialogs.lib
examples/: CMakeLists.txt  hello.c  hello_tfd.cpp  hello_wchar_t.c
